--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -5,44 +5,39 @@
 }
 
 body {
-    background-color: #242424;
+    background-color: #000000;
     font-family: 'fonte2', sans-serif;
     text-decoration: none;
-    color: rgb(77, 77, 77);
+    color: rgb(218, 218, 218);
     text-align: center;
 }
 
-div#msg {
-    color: rgb(49, 49, 49)
+div#msg,#msg2 {
+    color: rgb(188, 87, 255)
 }
 
 a {
-    color: rgb(49, 49, 49);
+    color: rgb(255, 255, 255);
 }
 
+p#btnmenu {
+    margin-top: 50px;
+}
 a:hover {
-    color: rgb(64, 2, 105);
+    color: rgb(138, 0, 126);
     text-decoration: underline;
-    transition: 1.5s;
+    transition: 1s;
 }
 
-footer#rodape {
-    clear: both;
-    margin: 225px auto 0px auto;
-}
-
-footer#rodape p {
-	text-align: center;
-	color: rgb(196, 196, 196);
-}
-
-footer#rodape a {
-	color: rgb(196, 196, 196);
-	text-decoration: none;
-}
-
-footer#rodape a:hover {
-	text-decoration: underline;
-	color: rgb(64, 2, 105);
-	transition: 1.5s;
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../media/background.jpg');
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    opacity: 0.3;
 }
