--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -41,3 +41,17 @@ a:hover {
     z-index: -1;
     opacity: 0.3;
 }
+
+ul {
+    text-align: left;
+    display: inline-block;
+    margin-top: 0;
+}
+
+h2#aboutme {
+    margin-top: 100px;
+}
+
+ul {
+    list-style-type: none
+}
